# emissary

./: Cargo.toml  README.md
.config/: nextest.toml
.github/workflows/: ci.yml
docs/: contact.md  debugging.md  development.md  embedding-overview.md  embedding-rust.md  index.md  quick-start.md  router-configuration.md  tooling.md
docs/.vitepress/: config.mts
emissary-cli/: Cargo.toml
emissary-cli/src/: address_book.rs  cli.rs  config.rs  main.rs
emissary-cli/src/proxy/: mod.rs  socks.rs
emissary-cli/src/tools/: base64.rs  devnet.rs  mod.rs  router_ui_dev.rs
emissary-cli/src/tunnel/: client.rs
emissary-core/: Cargo.toml
emissary-core/fuzz/: Cargo.toml
emissary-core/fuzz/fuzz_targets/: i2np_message_builder.rs  primitives.rs  short_tunnel_build_builder.rs  tunnel_data_builder.rs
emissary-core/src/: bloom.rs  error.rs  events.rs  lib.rs  profile.rs  protocol.rs  shutdown.rs  subsystem.rs
emissary-core/src/crypto/: dsa.rs  mod.rs
emissary-core/src/destination/: lease_set.rs  mod.rs  routing_path.rs
emissary-core/src/error/: mod.rs  parser.rs
emissary-core/src/i2cp/: mod.rs  session.rs  socket.rs
emissary-core/src/i2np/: garlic.rs  mod.rs
emissary-core/src/netdb/: dht.rs  handle.rs  metrics.rs  mod.rs  query.rs
emissary-core/src/primitives/: datagram_flags.rs  date.rs  destination.rs  lease_set.rs  mapping.rs  mod.rs  offline_signature.rs  router_address.rs  router_identity.rs  router_info.rs  string.rs
emissary-core/src/router/: context.rs  mod.rs
emissary-core/src/runtime/: mock.rs  mod.rs  noop.rs
emissary-core/src/sam/: mod.rs  parser.rs  session.rs  socket.rs
emissary-core/src/transport/: metrics.rs  mod.rs
emissary-core/test-vectors/: destination.b64  elgamal.b64
emissary-core/tests/: sam.rs
emissary-util/: Cargo.toml
emissary-util/src/: certificates.rs  lib.rs  reseeder.rs  storage.rs  su3.rs
emissary-util/src/port_mapper/: mod.rs
emissary-util/src/runtime/: smol.rs  tokio.rs
examples/rust-chat/: Cargo.toml  README.md
examples/rust-chat/src/: lib.rs
examples/rust-tutorial/: Cargo.toml  README.md
resources/: dashboard.json  prometheus.yml
(+97 files in other folders)
