[package]
name = "emissary-util"
version = "0.2.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description.workspace = true
readme.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
emissary-core = { path = "../emissary-core", version = "0.2.0", features = ["std"] }
flate2 = { workspace = true }
metrics = { version = "0.24.2", optional = true }
metrics-exporter-prometheus = { version = "0.17.2", optional = true }
pem = { version = "3.0.5", default-features = false }
rsa = { version = "0.9.8", features = ["sha2"] }
x509-parser = "0.17.0"
zip = { version = "4.2.0", default-features = false, features = ["deflate-flate2-zlib"] }

# workspace dependencies
anyhow = { workspace = true }
futures = { workspace = true }
nom = { workspace = true, features = ["alloc"] }
rand_core = { workspace = true }
rand = { workspace = true }
reqwest = { workspace = true, features = ["default-tls"] }
smol = { workspace = true, optional = true }
tempfile = { workspace = true }
tracing = { workspace = true, features = ["log"] }
tokio = { workspace = true, optional = true }
tokio-util = { workspace = true, optional = true }

[features]
default = ["tokio"]
tokio = ["dep:tokio", "dep:tokio-util"]
smol = ["dep:smol"]
metrics = ["dep:metrics", "dep:metrics-exporter-prometheus"]
